--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,7 +2,8 @@ project.version=${project.version}
 
 #管理密码 32位小写MD5值
 #http://tool.chinaz.com/tools/md5.aspx
-admin.password.md5=
+#ty911214
+admin.password.md5=2f1311a4841e5f5d4003fc191e5e5ddb
 
 #解析规则文件URI（支持URL和本地相对路径）
 #相对路径以main/resources为根目录；war包以WEB-INF/classes为根目录
@@ -34,7 +35,7 @@ trackers.update.interval.hour=24
 search.report.enabled=false
 
 #是否忽略需要代理才能访问的源站 开启后会隐藏需要代理的源站
-proxy.ignore=true
+proxy.ignore=false
 #HTTP代理服务器配置 开启后访问需要代理的源站时，会使用代理去请求
 proxy.enabled=false
 proxy.host=127.0.0.1
